// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton should render correctly on Android the button with type cancel 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#6a737d",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type confirm 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "#0376c9",
          "minHeight": 50,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type normal 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#0376c9",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type orange 1`] = `
<TouchableNativeFeedback
  accessibilityRole="button"
  accessible={true}
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "borderColor": "#bf5208",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on iOS the button with type cancel 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={0.2}
  style={
    [
      [
        {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#6a737d",
          "borderWidth": 1,
        },
        undefined,
      ],
      null,
    ]
  }
/>
`;

exports[`StyledButton should render correctly on iOS the button with type confirm 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={0.2}
  style={
    [
      [
        {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "#0376c9",
          "minHeight": 50,
        },
        undefined,
      ],
      null,
    ]
  }
/>
`;

exports[`StyledButton should render correctly on iOS the button with type normal 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={0.2}
  style={
    [
      [
        {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#0376c9",
          "borderWidth": 1,
        },
        undefined,
      ],
      null,
    ]
  }
/>
`;

exports[`StyledButton should render correctly on iOS the button with type orange 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={0.2}
  style={
    [
      [
        {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        {
          "borderColor": "#bf5208",
          "borderWidth": 1,
        },
        undefined,
      ],
      null,
    ]
  }
/>
`;
